src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/WGLEXTSwapControl_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLEXTSwapControl_StringErrorContext.class */
public final class WGLEXTSwapControl_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("wglSwapIntervalEXT(I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLEXTSwapControlErrorContext");
        methods.put("wglGetSwapIntervalEXT()I", "net/labymod/core/laby3d/opengl/error/generated/WGLEXTSwapControlErrorContext");
        return methods;
    }
}
